--- a/.github/workflows/update-gradle-wrapper.yml
+++ b/.github/workflows/update-gradle-wrapper.yml
@@ -3,6 +3,7 @@ name: Update Gradle Wrapper
 on:
   schedule:
     - cron: "0 0 * * *"
+  workflow_dispatch:
 
 permissions:
   contents: read
@@ -11,7 +12,7 @@ jobs:
   update-gradle-wrapper:
     permissions:
       pull-requests: write # for gradle-update/update-gradle-wrapper-action
-    if: github.repository == 'testcontainers/testcontainers-java'
+      contents: write # for gradle-update/update-gradle-wrapper-action
     runs-on: ubuntu-latest
 
     steps:
