--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 
 on:
   pull_request: {}
-  push: { branches: [ main ] }
+  push: { }
 
 concurrency:
   group: "${{ github.workflow }}-${{ github.head_ref || github.sha }}"
