--- a/.github/workflows/combine-prs.yml
+++ b/.github/workflows/combine-prs.yml
@@ -6,7 +6,7 @@ on:
 jobs:
   combine-prs:
     permissions:
-      contents: read
+      contents: write
       pull-requests: read
     runs-on: ubuntu-latest
     steps:
